@@ -9,6 +9,8 @@ nobase_include_HEADERS =				\
 	roboptim-core/generic-solver.hh			\
 	roboptim-core/indent.hh				\
 	roboptim-core/linear-function.hh		\
+	roboptim-core/n-times-derivable-function.hh	\
+	roboptim-core/n-times-derivable-function.hxx	\
 	roboptim-core/numeric-quadratic-function.hh	\
 	roboptim-core/numeric-linear-function.hh	\
 	roboptim-core/problem.hh			\
